crates/rascal/src/snapshots/rascal__program__tests__all_samples@AnEmptyInterface.as.snap
---
source: crates/rascal/src/program.rs
expression: parsed
input_file: samples/as2_classes/AnEmptyInterface.as
---
Ok:
  initial_script: []
  interfaces:
    - name: AnEmptyInterface
      extends: ~
      functions: {}
  classes: []
  custom_pcodes: []
  compile_options:
    swf_version: 15
