crates/rascal/src/snapshots/rascal__program__tests__all_samples@DynamicClass.as.snap
---
source: crates/rascal/src/program.rs
expression: parsed
input_file: samples/as2_classes/DynamicClass.as
---
Ok:
  initial_script: []
  interfaces: []
  classes:
    - name: DynamicClass
      extends: ~
      implements: []
      functions: {}
      virtual_properties: {}
      fields: {}
      constructor:
        signature:
          name:
            span:
              start: 14
              end: 26
            value: DynamicClass
          args: []
          return_type: ~
        body: []
        scope:
          defined_variables: {}
          referenced_variables: []
          could_reference_anything: false
  custom_pcodes: []
