crates/rascal/src/snapshots/rascal__program__tests__all_samples@NotMtascStyle.as.snap
---
source: crates/rascal/src/program.rs
expression: parsed
input_file: samples/as2_classes/NotMtascStyle.as
---
Ok:
  initial_script: []
  interfaces: []
  classes:
    - name: NotMtascStyle
      extends: ~
      implements: []
      functions:
        main:
          function:
            signature:
              name:
                span:
                  start: 42
                  end: 46
                value: main
              args: []
              return_type: ~
            body:
              - Expr:
                  span:
                    start: 59
                    end: 97
                  value:
                    Trace:
                      span:
                        start: 65
                        end: 96
                      value:
                        Constant:
                          String: Not actually the main method!
            scope:
              defined_variables:
                this:
                  used: false
                  used_in_inner_scope: false
                  type_name:
                    span:
                      start: 0
                      end: 0
                    value: NotMtascStyle
                arguments:
                  used: false
                  used_in_inner_scope: false
                  type_name: ~
                super:
                  used: false
                  used_in_inner_scope: false
                  type_name: ~
                _root:
                  used: false
                  used_in_inner_scope: false
                  type_name: ~
                _parent:
                  used: false
                  used_in_inner_scope: false
                  type_name: ~
                _global:
                  used: false
                  used_in_inner_scope: false
                  type_name: ~
              referenced_variables: []
              could_reference_anything: false
            register_count: 1
            preload_this: false
            suppress_this: true
            preload_arguments: false
            suppress_arguments: true
            preload_super: false
            suppress_super: true
            preload_root: false
            preload_parent: false
            preload_global: false
          is_static: false
      virtual_properties: {}
      fields: {}
      constructor:
        signature:
          name:
            span:
              start: 6
              end: 19
            value: NotMtascStyle
          args: []
          return_type: ~
        body: []
        scope:
          defined_variables: {}
          referenced_variables: []
          could_reference_anything: false
        register_count: 1
        preload_this: false
        suppress_this: true
        preload_arguments: false
        suppress_arguments: true
        preload_super: false
        suppress_super: true
        preload_root: false
        preload_parent: false
        preload_global: false
  custom_pcodes: []
  compile_options:
    swf_version: 15
    optimizations:
      fold_constants: true
      promote_variables_to_registers: true
