crates/rascal/src/snapshots/rascal__program__tests__all_samples@constant_folding.as.snap
---
source: crates/rascal/src/program.rs
expression: parsed
input_file: samples/as2/constant_folding.as
---
Ok:
  initial_script:
    - Expr:
        span:
          start: 9
          end: 22
        value:
          Trace:
            span:
              start: 15
              end: 21
            value:
              Constant:
                Boolean: true
    - Expr:
        span:
          start: 24
          end: 38
        value:
          Trace:
            span:
              start: 30
              end: 37
            value:
              Constant:
                Boolean: false
    - Expr:
        span:
          start: 48
          end: 58
        value:
          Trace:
            span:
              start: 54
              end: 57
            value:
              Constant:
                Boolean: false
    - Expr:
        span:
          start: 60
          end: 70
        value:
          Trace:
            span:
              start: 66
              end: 69
            value:
              Constant:
                Boolean: true
    - Expr:
        span:
          start: 72
          end: 83
        value:
          Trace:
            span:
              start: 78
              end: 82
            value:
              UnaryOperator:
                - LogicalNot
                - span:
                    start: 79
                    end: 82
                  value:
                    UnaryOperator:
                      - LogicalNot
                      - span:
                          start: 80
                          end: 82
                        value:
                          UnaryOperator:
                            - Sub
                            - span:
                                start: 81
                                end: 82
                              value:
                                Constant:
                                  Integer: 1
    - Expr:
        span:
          start: 95
          end: 107
        value:
          Trace:
            span:
              start: 101
              end: 106
            value:
              Constant:
                Boolean: false
    - Expr:
        span:
          start: 109
          end: 121
        value:
          Trace:
            span:
              start: 115
              end: 120
            value:
              Constant:
                Boolean: true
    - Expr:
        span:
          start: 134
          end: 146
        value:
          Trace:
            span:
              start: 140
              end: 145
            value:
              Constant:
                Boolean: false
    - Expr:
        span:
          start: 148
          end: 159
        value:
          Trace:
            span:
              start: 154
              end: 158
            value:
              Constant:
                Boolean: false
    - Expr:
        span:
          start: 161
          end: 176
        value:
          Trace:
            span:
              start: 167
              end: 175
            value:
              Constant:
                Boolean: false
    - Expr:
        span:
          start: 178
          end: 194
        value:
          Trace:
            span:
              start: 184
              end: 193
            value:
              Constant:
                Boolean: false
    - Expr:
        span:
          start: 235
          end: 248
        value:
          Trace:
            span:
              start: 241
              end: 247
            value:
              UnaryOperator:
                - LogicalNot
                - span:
                    start: 242
                    end: 247
                  value:
                    UnaryOperator:
                      - LogicalNot
                      - span:
                          start: 243
                          end: 247
                        value:
                          Constant:
                            Identifier: "null"
    - Expr:
        span:
          start: 250
          end: 268
        value:
          Trace:
            span:
              start: 256
              end: 267
            value:
              UnaryOperator:
                - LogicalNot
                - span:
                    start: 257
                    end: 267
                  value:
                    UnaryOperator:
                      - LogicalNot
                      - span:
                          start: 258
                          end: 267
                        value:
                          Constant:
                            Identifier: undefined
    - Expr:
        span:
          start: 270
          end: 282
        value:
          Trace:
            span:
              start: 276
              end: 281
            value:
              UnaryOperator:
                - LogicalNot
                - span:
                    start: 277
                    end: 281
                  value:
                    UnaryOperator:
                      - LogicalNot
                      - span:
                          start: 278
                          end: 281
                        value:
                          Constant:
                            Identifier: foo
    - Expr:
        span:
          start: 285
          end: 321
        value:
          Trace:
            span:
              start: 291
              end: 320
            value:
              Constant:
                String: ab3true123.45
  interfaces: []
  classes: []
  custom_pcodes: []
